--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="hero-glow hero-glow-2"></div>
     <div class="hero-grid-bg"></div>
     <div class="container hero-content">
-      <div class="hero-badge">capabilityintegrator.eu</div>
+      <div class="hero-badge">capabilityintegrator.eu &nbsp;·&nbsp; capabilityintegration.eu</div>
       <h1>Domain-specific<br>Capability Integration Services<span class="accent">.</span></h1>
       <p class="hero-sub">One contract. Many contributors. Sovereign by design.</p>
       <p class="hero-body">CAYS creates domain-specific Capability Integration Services: sovereign, cooperative, publicly anchored entities that enable governments to lawfully contract one organisation for end-to-end capability integration, while industry collaborates behind a neutral legal firewall.</p>
